@@ -5,6 +5,7 @@ Next Version
       to create custom static get() method in subclass (issue #7)
     - Removed deprecated ContextApplicationFactoryBean
     - Added @EntityManagerAvailable Spring annotation
+    - Add SpringXSLPersistentObjectSchemaUpdate.setTransformerFactory()
 
 Version 1.0.315 Released March 26, 2012
 
